@@ -1,18 +1,19 @@
 package com.ecspring.services.impl;
 
-
+import com.ecspring.dto.CreateUserDto;
 import com.ecspring.dto.RegisterDto;
 import com.ecspring.entity.RoleEntity;
 import com.ecspring.entity.UserEntity;
 import com.ecspring.repositories.RoleRepository;
 import com.ecspring.repositories.UserRepository;
+import com.ecspring.services.RoleService;
 import com.ecspring.services.UserService;
 
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,13 +22,17 @@ public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
     private final RoleRepository roleRepository;
+    private final RoleService roleService;
     private final PasswordEncoder passwordEncoder;
 
-    public UserServiceImpl(UserRepository userRepository,
+    public UserServiceImpl(
+            UserRepository userRepository,
             RoleRepository roleRepository,
+            RoleService roleService,
             PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
+        this.roleService = roleService;
         this.passwordEncoder = passwordEncoder;
     }
 
@@ -36,11 +41,10 @@ public class UserServiceImpl implements UserService {
         return userRepository.existsByUsername(username);
     }
 
+    @Override
     public boolean checkEmailExists(String email) {
         return userRepository.existsByEmail(email);
     }
-
-
 
     @Transactional
     @Override
@@ -58,7 +62,7 @@ public class UserServiceImpl implements UserService {
             roleRepository.save(role);
         }
 
-        user.setRoles(Arrays.asList(role));
+        user.setRoles(List.of(role));
         userRepository.save(user);
     }
 
@@ -76,7 +80,7 @@ public class UserServiceImpl implements UserService {
     public List<RegisterDto> findAllUsers() {
         List<UserEntity> users = userRepository.findAll();
         return users.stream()
-                .map((user) -> mapToUserDto(user))
+                .map(this::mapToUserDto)
                 .collect(Collectors.toList());
     }
 
@@ -86,5 +90,28 @@ public class UserServiceImpl implements UserService {
         userDto.setUsername(user.getUsername());
         userDto.setEmail(user.getEmail());
         return userDto;
+    }
+
+    @Transactional
+    @Override
+    public void saveUserWithRoles(CreateUserDto createUserDto) {
+        UserEntity user = new UserEntity();
+        user.setName(createUserDto.getName());
+        user.setEmail(createUserDto.getEmail());
+        user.setUsername(createUserDto.getUsername());
+        user.setPassword(passwordEncoder.encode(createUserDto.getPassword()));
+        
+        List<RoleEntity> roles = roleService.findRolesByNames(createUserDto.getRoles());
+        user.setRoles(roles);
+        userRepository.save(user);
+    }
+
+    @Override
+    public List<UserEntity> findUsersByRole(String roleName) {
+        RoleEntity role = roleRepository.findByName(roleName);
+        if (role != null) {
+            return role.getUsers();
+        }
+        return new ArrayList<>();
     }
 }
